More on tags (VI)
- rename NoteData -> Note
- rename GroupDate -> NoteGroup
- note metadata links to taginfo