@@ -143,6 +143,7 @@ def newArgs = [ '--add-modules', 'javafx.controls,javafx.graphics,javafx.base,ja
                 // TFE, 20200803: workaround for "WARNING: Illegal reflective access by com.rits.cloning.Cloner"
                 // https://github.com/x-stream/xstream/issues/101#issuecomment-667734663
                 '--add-opens', 'java.base/java.util=ALL-UNNAMED',
+                '--add-opens', 'javafx.base/com.sun.javafx.collections=ALL-UNNAMED',
     ]
     
 // extend Netbeans Gradle "Run" task
